UHF-4235: Convert list-of-links to use link function

--- a/src/scss/06_components/pages/_service.scss
+++ b/src/scss/06_components/pages/_service.scss
@@ -156,6 +156,7 @@ $teaser-icon-size-desktop: 48px;
     }
 
     &:hover {
+      text-decoration: underline;
       .hel-icon {
         margin-left: $spacing;
         @media (prefers-reduced-motion) {
