--- a/templates/content/node.html.twig
+++ b/templates/content/node.html.twig
@@ -88,7 +88,10 @@
   {{ title_prefix }}
   {% if label and not page and not hide_label %}
     <h2{{ title_attributes }}>
-      <a href="{{ url }}" rel="bookmark">{{ label }}</a>
+      {% set link_attributes = {
+        'rel': 'bookmark',
+      } %}
+      {{ link(label, node_url, link_attributes) }}
     </h2>
   {% endif %}
   {{ title_suffix }}
