UHF-4235: Moved link-button template to navigation folder and added selectable icon support to helfi-link template.

--- a/templates/navigation/link-button.html.twig
+++ b/templates/navigation/link-button.html.twig
@@ -11,7 +11,7 @@
  * - class: Optional String to be added to the class list
  *
  * Usage example:
- * {% include '@hdbt/button/link-button.html.twig' with {
+ * {% include '@hdbt/navigation/link-button.html.twig' with {
  *   type: 'primary',
  *   label: item.content['#title'],
  *   url: item.content['#url'],
