--- a/templates/module/helfi_api_base/helfi-link.html.twig
+++ b/templates/module/helfi_api_base/helfi-link.html.twig
@@ -1,16 +1,20 @@
 {% spaceless %}
 
+  {% if 'data-selected-icon' in url.options.attributes|keys %}
+    {% set selected_icon -%}{% include '@hdbt/misc/icon.twig' ignore missing with {icon: url.options.attributes['data-selected-icon']} only %}{%- endset %}
+  {% endif %}
+
   {% if 'data-is-external' in attributes|keys %}
-    {% set icon %}<span class="link__type link__type--external" title="({{ 'Link leads to external service'|t({}, {'context': 'Explanation for screen-reader software that the icon visible next to this link means that the link leads to an external service.'}) }})"></span>{%- endset %}
+    {% set attribute_icon %}<span class="link__type link__type--external" title="({{ 'Link leads to external service'|t({}, {'context': 'Explanation for screen-reader software that the icon visible next to this link means that the link leads to an external service.'}) }})"></span>{%- endset %}
   {% endif %}
 
   {% if 'data-protocol' in attributes|keys and attributes['data-protocol'] != 'false'%}
-    {% if  attributes['data-protocol'] == 'tel' %}
-      {% set icon %}<span class="link__type link__type--tel" title="({{ 'Link starts a phone call'|t({}, {'context': 'Explanation for screen-reader software that the icon visible next to this link means that the link starts a phone call.'}) }})"></span>{%- endset %}
-    {% elseif  attributes['data-protocol'] == 'mailto' %}
-      {% set icon %}<span class="link__type link__type--mailto" title="({{ 'Link opens default mail program'|t({}, {'context': 'Explanation for screen-reader software that the icon visible next to this link means that the link opens default mail program.'}) }})"></span>{%- endset %}
+    {% if attributes['data-protocol'] == 'tel' %}
+      {% set attribute_icon %}<span class="link__type link__type--tel" title="({{ 'Link starts a phone call'|t({}, {'context': 'Explanation for screen-reader software that the icon visible next to this link means that the link starts a phone call.'}) }})"></span>{%- endset %}
+    {% elseif attributes['data-protocol'] == 'mailto' %}
+      {% set attribute_icon %}<span class="link__type link__type--mailto" title="({{ 'Link opens default mail program'|t({}, {'context': 'Explanation for screen-reader software that the icon visible next to this link means that the link opens default mail program.'}) }})"></span>{%- endset %}
     {% endif %}
   {% endif %}
-  {{ title }}{{ icon }}
+  {{ selected_icon }}{{ title }}{{ attribute_icon }}
 
 {% endspaceless %}
