--- a/templates/paragraphs/paragraph--hero.html.twig
+++ b/templates/paragraphs/paragraph--hero.html.twig
@@ -84,14 +84,14 @@
             <div class="hero__cta">
               {% for key, item in content.field_hero_link if key|first != '#' %}
                 {% set open_in_a_new_window = item['#options']['target_new'] %}
-                {% include '@hdbt/button/link-button.html.twig' with {
+                {% include '@hdbt/navigation/link-button.html.twig' with {
                   type: link_type|clean_class,
                   label: item['#title'],
                   url: item['#url'],
                   class: 'hero__button',
                   open_in_a_new_window: open_in_a_new_window,
-                  icon_last: true,
-                  icon_last_type: item['#options']['icon']|clean_class,
+                  icon: true,
+                  icon_type: item['#options']['icon']|clean_class,
                 } %}
               {% endfor %}
             </div>
