UHF-4235: Fix list of links icon size issue

--- a/src/scss/06_components/paragraphs/_list-of-links.scss
+++ b/src/scss/06_components/paragraphs/_list-of-links.scss
@@ -78,6 +78,7 @@ $item_spacing: $spacing-triple;
       @include hover-link-arrow-transition();
       content: '';
       display: block;
+      flex-shrink: 0;
       margin-left: -$spacing-quarter;
       margin-top: $spacing-half;
 
