UHF-4235: Added custom webpack compiler hook for creating similar icons file for [data-selected-icon] attributes as there are for hdbt/hel icons. Added the ckeditor-icons.css to ckeditor import array and extended the hdbt-icons styles for the [data-selected-icon].

--- a/src/scss/ckeditor.scss
+++ b/src/scss/ckeditor.scss
@@ -36,3 +36,8 @@ body.cke_editable {
     }
   }
 }
+
+// TODO: This needs a better home and some TLC.
+[data-selected-icon] {
+  @extend .hdbt-icon;
+}
