UHF-4235: Fix link__type margin in hds-buttons

--- a/src/scss/05_objects/_button.scss
+++ b/src/scss/05_objects/_button.scss
@@ -16,6 +16,7 @@
 
   // Right icon margin,
   // copied from HDS (hds-core/lib/components/button/button.css)
+  .link__type,
   .hel-icon:last-of-type:not(:first-of-type) {
     margin: 0 $spacing-half 0 0;
   }
