UHF-4235: Convert property to use spacing-variable

--- a/src/scss/05_objects/icons/_hdbt-icon.scss
+++ b/src/scss/05_objects/icons/_hdbt-icon.scss
@@ -23,8 +23,8 @@
     order: 1;
   }
   .link__type {
-    margin-left: -16px; // Move external icon a bit to left without effecting transitions
-    margin-right: 16px;
+    margin-left: -$spacing; // Move external icon a bit to left without effecting transitions
+    margin-right: $spacing;
     order: 2;
   }
 
