--- a/src/scss/06_components/layout/_component.scss
+++ b/src/scss/06_components/layout/_component.scss
@@ -64,10 +64,10 @@
   @include font('body');
   max-width: $content-width-max;
 
-  :first-child {
+  & > :first-child {
     margin-top: 0;
   }
-  :last-child {
+  & > :last-child {
     margin-bottom: 0;
   }
 }
