UHF-4235: Add modified icons for tel and mailto

--- a/src/scss/05_objects/_link.scss
+++ b/src/scss/05_objects/_link.scss
@@ -10,12 +10,12 @@
 }
 
 .link__type--tel {
-  @include pseudo-icon-replace('phone');
+  @include pseudo-icon-replace('tel');
   --external-icon-move: rotate(15deg);
 }
 
 .link__type--mailto {
-  @include pseudo-icon-replace('envelope');
+  @include pseudo-icon-replace('mailto');
   --external-icon-move: rotate(15deg);
 }
 
