--- a/src/scss/06_components/paragraphs/_sidebar-text.scss
+++ b/src/scss/06_components/paragraphs/_sidebar-text.scss
@@ -134,7 +134,7 @@
         order: 3;
       }
 
-      &[data-is-external='true']:after {
+      &[data-is-external]:after {
         display: none; // external links have their own icon already
       }
 
