UHF-4235: Fix button colors in ckeditor

--- a/src/scss/06_components/paragraphs/_text.scss
+++ b/src/scss/06_components/paragraphs/_text.scss
@@ -1,3 +1,4 @@
+.cke_editable, // Fix colors in edit mode too.
 .component--paragraph-text .component__content {
   @include font('body');
   max-width: $content-width-max;
