--- a/src/scss/ckeditor.scss
+++ b/src/scss/ckeditor.scss
@@ -13,6 +13,7 @@
 @import '03_generic/_index';
 @import '04_elements/_index';
 @import '05_objects/_index';
+@import '06_components/paragraphs/text';
 
 
 [data-selected-icon]::before,
