--- a/src/scss/06_components/paragraphs/_map.scss
+++ b/src/scss/06_components/paragraphs/_map.scss
@@ -1,3 +1,5 @@
+$_map-aspect-ratio: 16/9;
+
 .component--map .component__container {
   background-color: $color-silver-light;
   padding: 32px 32px 48px;
@@ -6,7 +8,7 @@
 .map {
   height: 0;
   margin: $spacing 0;
-  padding-bottom: 56.5%;
+  padding-bottom: aspect-ratio-padding($_map-aspect-ratio);
   position: relative;
 
   > div,
