--- a/src/scss/06_components/paragraphs/_remote-video.scss
+++ b/src/scss/06_components/paragraphs/_remote-video.scss
@@ -1,3 +1,5 @@
+$_video-aspect-ratio: 16/9;
+
 .component--remote-video {
   @include component-side-padding;
   background-color: $color-black;
@@ -34,7 +36,7 @@
     background-color: $color-black-10; // Add color to show a "placeholder" while the video is loading.
     height: 0;
     overflow: hidden;
-    padding-bottom: 56.5%;
+    padding-bottom: aspect-ratio-padding($_video-aspect-ratio);
 
     iframe {
       border: 0;
