UHF-4235: Fix quote accessibility problem with larger line-height

--- a/src/scss/05_objects/_quote.scss
+++ b/src/scss/05_objects/_quote.scss
@@ -1,5 +1,5 @@
 .quote {
-  @include font('h3');
+  @include font('special.quote');
   display: block;
   margin: $spacing-triple 0;
   padding: $spacing-half 0 $spacing-half $spacing-and-half;
