--- a/src/scss/01_variables/_typography_variables.scss
+++ b/src/scss/01_variables/_typography_variables.scss
@@ -118,6 +118,16 @@ $config: deep-map-merge($config, (
         font-weight: $font-weight-medium,
         line-height: 30/20,
       ),
+      quote: (
+        font-size: remify(24px),
+        font-weight: $font-weight-medium, // was regular
+        line-height: 36/24,
+        breakpoint_l: (
+          font-size: remify(32px),
+          font-weight: $font-weight-regular,
+          line-height: 48/32,
+        )
+      ),
       breadcrumb: (
         parent: (
           font-size: remify(18px),
