UHF-4235: Fix emulated service channel links

--- a/src/scss/06_components/pages/_service-channel.scss
+++ b/src/scss/06_components/pages/_service-channel.scss
@@ -12,7 +12,8 @@
   }
 
   a:not(.service-channel__link) {
-    @extend .emulate-button--primary;
+    --background-color-hover: transparent;
+    --background-color-hover-focus: transparent;
     --background-color: var(--hdbt-color-palette-button--secondary);
     --background-color-focus: var(--hdbt-color-palette-button--secondary);
     --border-color: var(--hdbt-color-palette-button--secondary);
