UHF-4235: Patch leaky hds-button__label margins and paddings when outside button

--- a/src/scss/05_objects/_button.scss
+++ b/src/scss/05_objects/_button.scss
@@ -106,3 +106,9 @@ p > a.hds-button.hds-button--supplementary:first-child {
 .hds-button__target-blank {
   @include visually-hidden();
 }
+
+// Combat ckeditor leaking spans from inside buttons and hds setting these spans stupid paddings and margins
+:not(.hds-button) > .hds-button__label {
+  margin: 0;
+  padding: 0;
+}
