UHF-4235: Move hds styles inside styles.scss and ckeditor.scss

--- a/src/scss/ckeditor.scss
+++ b/src/scss/ckeditor.scss
@@ -3,6 +3,8 @@
 // This file includes styling for WYSIWYG editor.
 //
 
+@import 'hds';
+
 @import '~breakpoint-sass';
 
 @import '00_functions/_index';
