UHF-4235: Clean buttons used in eu cookie compliance banner

--- a/templates/misc/eu_cookie_compliance_popup_info.html.twig
+++ b/templates/misc/eu_cookie_compliance_popup_info.html.twig
@@ -49,7 +49,7 @@
 
     {% if more_info_button %}
       <div class="eu-cookie-compliance-more-info">
-        <button type="button" class="find-more-button eu-cookie-compliance-more-button hds-button">{{ more_info_button }}</button>
+        <button type="button" class="find-more-button eu-cookie-compliance-more-button hds-button hds-button--supplementary">{{ more_info_button }}</button>
       </div>
     {% endif %}
 
