--- a/src/scss/06_components/_eu-cookie-compliance-banner.scss
+++ b/src/scss/06_components/_eu-cookie-compliance-banner.scss
@@ -67,15 +67,6 @@
     }
   }
 
-  .eu-cookie-compliance-more-button.hds-button {
-    background-color: transparent;
-    border: none;
-    color: $color-white;
-    padding: 0;
-    text-decoration: underline;
-    width: auto;
-  }
-
   .eu-cookie-compliance-categories-buttons {
     margin-top: $spacing;
 
@@ -91,42 +82,12 @@
   }
 
   .hds-button {
+    @include hds-button-colors-on-dark-bg();
     max-width: 400px;
     width: 100%;
 
-    &.hds-button--primary {
-      background-color: $color-white;
-      color: $color-bus;
-
-      &:not(:disabled):focus:after {
-        border-color: $color-white;
-      }
-
-      &:active,
-      &:hover {
-        color: $color-bus;
-      }
-    }
-
-    &.hds-button--secondary {
-      border-color: $color-white;
-      color: $color-white;
-
-      &:active {
-        color: $color-white;
-      }
-
-      &:not(:disabled):focus:after {
-        border-color: $color-white;
-      }
-
-      &:hover {
-        color: $color-bus;
-
-        &:active {
-          color: $color-bus;
-        }
-      }
+    @include breakpoint($breakpoint-m) {
+      width: auto;
     }
   }
 }
