--- a/src/scss/06_components/pages/_cookie-compliance.scss
+++ b/src/scss/06_components/pages/_cookie-compliance.scss
@@ -121,47 +121,8 @@
       }
     }
 
-    .hds-button--primary,
-    .hds-button--secondary {
-      @include font('button');
-    }
-
-    .hds-button--primary {
-      --background-color: var(--color-black-90);
-      --background-color-hover: var(--color-white);
-      --background-color-focus: var(--color-black-90);
-      --background-color-hover-focus: var(--color-white);
-      --background-color-disabled: var(--color-black-20);
-      --border-color: var(--color-black-90);
-      --border-color-hover: var(--color-black);
-      --border-color-focus: var(--color-black-90);
-      --border-color-hover-focus: var(--color-black-90);
-      --border-color-disabled: var(--color-black-20);
-      --color: var(--color-white);
-      --color-hover: var(--color-black-90);
-      --color-focus: var(--color-white);
-      --color-hover-focus: var(--color-black-90);
-      --color-disabled: var(--color-white);
-      --focus-outline-color: var(--color-black-90);
-      --submit-input-focus-gutter-color: var(--color-white);
-    }
-
-    .hds-button--secondary {
-      --background-color: transparent;
-      --background-color-hover: var(--color-black-90);
-      --background-color-focus: transparent;
-      --background-color-hover-focus: var(--color-black-90);
-      --background-color-disabled: transparent;
-      --border-color: var(--color-black-90);
-      --border-color-hover: var(--color-black-90);
-      --border-color-focus: var(--color-black-90);
-      --border-color-hover-focus: var(--color-black-90);
-      --border-color-disabled: var(--color-black-50);
-      --color: var(--color-black-90);
-      --color-hover: var(--color-white);
-      --color-focus: var(--color-black-90);
-      --color-hover-focus: var(--color-white);
-      --focus-outline-color: var(--color-black-90);
+    .hds-button {
+      @include hds-button-colors-on-light-bg();
     }
 
     .hds-button {
@@ -192,42 +153,9 @@
   .message {
     background-color: $color-black;
 
-    .hds-button--primary {
-      --background-color: var(--color-white);
-      --background-color-hover: var(--color-black);
-      --background-color-focus: var(--color-white);
-      --background-color-hover-focus: var(--color-black);
-      --background-color-disabled: var(--color-black-50);
-      --border-color: var(--color-white);
-      --border-color-hover: var(--color-white);
-      --border-color-focus: var(--color-white);
-      --border-color-hover-focus: var(--color-white);
-      --border-color-disabled: var(--color-black-50);
-      --color: var(--color-black);
-      --color-hover: var(--color-white);
-      --color-focus: var(--color-black);
-      --color-hover-focus: var(--color-white);
-      --color-disabled: var(--color-black);
-      --focus-outline-color: var(--color-white);
-      --submit-input-focus-gutter-color: var(--color-black);
-    }
 
-    .hds-button--secondary {
-      --background-color: transparent;
-      --background-color-hover: var(--color-white);
-      --background-color-focus: transparent;
-      --background-color-hover-focus: var(--color-white);
-      --background-color-disabled: transparent;
-      --border-color: var(--color-white);
-      --border-color-hover: var(--color-white);
-      --border-color-focus: var(--color-white);
-      --border-color-hover-focus: var(--color-white);
-      --border-color-disabled: var(--color-black-50);
-      --color: var(--color-white);
-      --color-hover: var(--color-black);
-      --color-focus: var(--color-white);
-      --color-hover-focus: var(--color-black);
-      --focus-outline-color: var(--color-white);
+    .hds-button {
+      @include hds-button-colors-on-dark-bg();
     }
   }
 }
