--- a/src/scss/03_generic/_normalise.scss
+++ b/src/scss/03_generic/_normalise.scss
@@ -9,8 +9,8 @@
  */
 
 html {
-  line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
+  line-height: 1.15; /* 1 */
 }
 
 /* Sections
@@ -174,8 +174,8 @@ textarea {
  */
 
 button,
-input { /* 1 */
-  overflow: visible;
+input {
+  overflow: visible; /* 1 */
 }
 
 /**
@@ -184,8 +184,8 @@ input { /* 1 */
  */
 
 button,
-select { /* 1 */
-  text-transform: none;
+select {
+  text-transform: none; /* 1 */
 }
 
 /**
